[project]
name = "duolabs_utils"
version = "0.0.0"
description = ""
authors = [
    {name = "DUOLabs333", email = "dvdugo333@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
